--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -36,11 +36,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/reciever_name"
                 android:paddingLeft="3dp"
+                android:id="@+id/txtRecieverName"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
+                android:textAlignment="viewStart"
                 android:textDirection="locale"
                 android:paddingStart="3dp" />
             <com.google.android.material.textfield.TextInputLayout
@@ -66,6 +68,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:textAlignment="viewStart"
+                android:id="@+id/txtemail"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -94,6 +98,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:id="@+id/txtmobile"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -122,7 +128,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/makani_no"
                 android:paddingLeft="3dp"
+                android:id="@+id/txtmakani"
                 android:layout_marginTop="10dp"
+                android:textAlignment="viewStart"
                 android:layout_marginBottom="-7dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
@@ -150,20 +158,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/emirate"
+                android:id="@+id/txtEmirate"
                 android:paddingLeft="3dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
+                android:textAlignment="viewStart"
                 android:textDirection="locale" />
 
             <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/et_emirates"
                     android:layout_marginTop="5dp"
                     android:gravity="start"
+                    android:layoutDirection="locale"
                     android:textColor="@color/gray_text_color"
                     android:textAlignment="viewStart"
                     android:textDirection="locale" >
@@ -175,6 +186,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:textAlignment="viewStart"
+                android:id="@+id/txtBuildingNo"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -201,6 +214,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:id="@+id/txtBuildingName"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -229,6 +244,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:id="@+id/txtStreetAddress"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -257,6 +274,8 @@
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
                 android:singleLine="true"
+                android:id="@+id/txtMaailingAddrress"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
@@ -286,9 +305,11 @@
                 android:singleLine="true"
                 android:layout_marginBottom="-7dp"
                 android:paddingLeft="3dp"
+                android:textAlignment="viewStart"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@color/gray_text_color"
                 android:textStyle="bold"
+                android:id="@+id/txtnearestLandmark"
                 android:textDirection="locale"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
