--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dubai_font"
                     android:text="@string/title_welcome"
+                    style="@style/font_medium_bold"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textSize="20sp"
@@ -87,6 +88,7 @@
                         android:fontFamily="@font/dubai_font"
                         android:text="Bin Saleh Abdullah"
                         android:textStyle="bold"
+                        style="@style/font_medium_bold"
                         android:gravity="center_vertical"
                         android:layout_gravity="center_vertical"
                         android:textColor="@color/white"
