--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -107,6 +107,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="2"
+                        android:lines="2"
+                        android:singleLine="false"
                         android:layout_marginTop="5dp"
                         android:text='@{adapterMyMapVM.getCurrentMyMap(position).req_created_date ?? ""}'
                         android:layout_marginStart="5dp"
