--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -13,6 +13,10 @@
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/spinerTitle"
@@ -22,6 +26,15 @@
             android:text="Select or Search Items"
             android:textSize="17sp"
             android:textStyle="bold" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/close"
+            android:id="@+id/imgClose"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/text_background"
+            android:layout_marginStart="-32dp"/>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,6 +84,7 @@
             android:layout_height="wrap_content"
             android:layoutDirection="locale"
             android:textAlignment="viewEnd"
+            android:visibility="gone"
             android:text="@string/not_now"
             android:background="@drawable/text_background"
             />
