--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
   <!-- Default screen margins, per the Android Design guidelines. -->
-
+  <dimen name="splash_logo_width">400dp</dimen>
+  <dimen name="splash_logo_height">300dp</dimen>
+  <dimen name="splash_logo_margin_top" >-348dp</dimen>
+  <dimen name="splash_logo_margin_bottom" >48dp</dimen>
+  <dimen name="splash_logo_margin_right" >32dp</dimen>
 
 </resources>
