--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,11 @@
   <dimen name="desc_padding">40dp</dimen>
   <dimen name="line_height">12dp</dimen>
   <dimen name="img_margin">50dp</dimen>
+  <dimen name="splash_logo_width">200dp</dimen>
+  <dimen name="splash_logo_height">150dp</dimen>
 
   <dimen name="toolbar_image_margin">16dp</dimen>
+  <dimen name="splash_logo_margin_top" >-174dp</dimen>
+  <dimen name="splash_logo_margin_bottom" >24dp</dimen>
+  <dimen name="splash_logo_margin_right" >16dp</dimen>
 </resources>
