--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
                     android:layout_marginStart="30dp"
                     android:gravity="center_vertical"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/arab_avatar"/>
+                    android:src="@drawable/user"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
