--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:textColor="@color/white"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:textAlignment="center"
