--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,16 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp">
+        >
         <LinearLayout
             android:id="@+id/layoutParent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:background="@color/maroon_light"
             android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:weightSum="2">
             <androidx.cardview.widget.CardView
                 android:id="@+id/layoutCardMyMap"
@@ -109,6 +108,8 @@
             android:id="@+id/viewPagerCreatePackage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="40dp"/>
     </LinearLayout>
 </layout>
