--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -115,7 +115,6 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_marginHorizontal="2dp"
                             android:background="@color/white"
                             android:layout_marginVertical="2dp"
                             android:orientation="vertical"
@@ -125,6 +124,8 @@
                                 android:id="@+id/tabRuntimeLayout"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
+                                android:layout_marginStart="13.5dp"
+                                android:layout_marginEnd="11.5dp"
                                 app:tabMode="fixed"
                                 app:tabTextAppearance="@style/font_medium_bold_tab"
                                 app:tabTextColor="@color/white"
@@ -146,7 +147,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="35dp"
                                 android:layout_marginTop="15dp"
-                                android:layout_marginHorizontal="15dp"
+                                android:layout_marginStart="13.5dp"
+                                android:layout_marginEnd="14dp"
                                 android:layout_below="@+id/tabRuntimeLayout"
                                 android:background="@color/extra_light_gray">
                                 <TextView
