--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="splash_logo_margin_top" >-186dp</dimen>
     <dimen name="splash_logo_margin_bottom" >36dp</dimen>
     <dimen name="splash_logo_margin_right" >24dp</dimen>
+    <dimen name="settngs_switch_margin" >275dp</dimen>
 </resources>
