--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -5,5 +5,6 @@
   <dimen name="splash_logo_margin_top" >-348dp</dimen>
   <dimen name="splash_logo_margin_bottom" >48dp</dimen>
   <dimen name="splash_logo_margin_right" >32dp</dimen>
+  <dimen name="settngs_switch_margin" >720dp</dimen>
 
 </resources>
