--- a/app/src/main/res/layout/fragment_bottomsheet_map_function.xml
+++ b/app/src/main/res/layout/fragment_bottomsheet_map_function.xml
@@ -13,6 +13,8 @@
         android:background="@color/maroon_dark"
         android:orientation="vertical"
         app:behavior_hideable="true"
+        android:visibility="gone"
+        android:layout_marginBottom="72dp"
         app:behavior_peekHeight="56dp"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
         <View
